blog/infra/k8s/comments-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  # This instructs the deployment on how to find the Pods it should manage
  selector:
    matchLabels:
      app: comments
  # The template is where we specify the exact configuration of the pod we want deployment to create
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: igordonin/comments
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    app: comments
  # this is default and might be ommited
  type: ClusterIP
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
