blog/infra/k8s/posts-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  # This instructs the deployment on how to find the Pods it should manage
  selector:
    matchLabels:
      app: posts
  # The template is where we specify the exact configuration of the pod we want deployment to create
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: igordonin/posts:latest
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  selector:
    app: posts
  # this is default and might be ommited
  type: ClusterIP
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
